# sentinelops

./: .env.example  .gitignore  README.md  SentinelOps_Project_Brief.md  docker-compose.yml  pyproject.toml
data/preprocessing/: chunk.py  cleanup.py  dedup.py  pii.py  run_pipeline.py
data/scrapers/: _utils.py  cloudflare.py  danluu.py  github_status.py  gitlab.py  run_all.py
data/warehouse/: label_cli.py  llm_label.py  load.py  schema.sql  spot_check.py  spot_check_report.json  weak_label.py
docs/: decisions.md  model_card.md  week2_status.md
docs/runbooks/: cert-expiry.md  deploy-rollback.md  disk-full.md  latency-slo-burn.md  oom-killed.md  orders-service-errors.md  pod-not-ready.md  postgres-connection-pool-exhausted.md  upstream-degraded.md  users-service-errors.md
evaluation/: ab_results.md  ab_scores.json
observability/prometheus/: prometheus.yml
serving/agent/: graph.py  tools.py
serving/api/: main.py  schemas.py  smoke.py
serving/rag/: embed.py  rerank.py  search_test.py
training/classifier/: data.py  eval.py  model.py  model_pt.py  push_to_hf.py  train.py  train_pt.py
training/classifier/kaggle_outputs/classifier/: config.json  eval_report.json  label_mappings.json  splits.npz  test_results.json
training/classifier/kaggle_outputs/sentinelops/training/classifier/: model_pt.py  train_pt.py
training/llm/: merge_adapters.py  quantize_awq.py  sft_dataset.py  train_qlora.py
training/notebooks/: ab_sanity.ipynb  kaggle_classifier_train.py  merge_adapters.ipynb  qlora_train.ipynb  quantize_awq.ipynb
