[project]
name = "sentinelops"
version = "0.1.0"
description = "Agentic LLM copilot for SRE incident response"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Ayush Gupta" }]

# Week 1 core: scraping + data + classifier baseline.
# Week 2/3/4 deps are added in extras below to keep the base install lean.
dependencies = [
    # data / corpus
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26,<2.0",               # TF 2.15 compat
    "pyarrow>=16.0.0",
    # scraping
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "feedparser>=6.0.11",
    "tqdm>=4.66.0",
    # dedup + PII
    "datasketch>=1.6.5",
    # rag / vector (Week 3)
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0,<3.2.0",
    "pyyaml>=6.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    # classifier (TF)
    "tensorflow==2.15.0",
    "transformers>=4.40.0,<4.45.0",   # TF 2.15 friendly
    "datasets>=2.19.0",
    "tokenizers>=0.19.0",
    "scikit-learn>=1.4.0",
    # ops
    "huggingface_hub>=0.23.0",
    "wandb>=0.17.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "tensorflow>=2.15,<2.17",
    "transformers>=4.40",
    "wandb>=0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "training", "serving", "streaming", "evaluation"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
